BuyModal alignment fix

--- a/src/styles/2-components/_buymodal.sass
+++ b/src/styles/2-components/_buymodal.sass
@@ -5,7 +5,7 @@
     .MuiCard-root
         width: 334px
         height: 470px
-        margin-top: 75px
+        margin-top: 80px
         background: linear-gradient(to bottom right, #343434, #151515)
         border-radius: 10px
         text-align: center
@@ -34,5 +34,5 @@
                 margin-left: 15px 
     .actions
         button
-            margin-top: 15px
+            margin-top: 20px
             filter: none
